# smartarr

./: CMakeLists.txt  LICENSE  README.md
bench/: CMakeLists.txt  add.c  find.c  matrix_mul.c  sort.c
doc/: CMakeLists.txt  main_page.md
src/include/smartarr/: array.inc.h  basic_type_array.h  bench.h  cpu.h  defines.h  omp_array.inc.h  string.h  trait.h  utf8_string.h
src/include/smartarr/third/: README.md  list.h  utf8.h
test/: CMakeLists.txt  README.md  array.c  headers.c  list.c  matrix.c  string.c  trait.c  utf8.c
